objects/PLA_Page_Header__c.object
<CustomObject>
    <description>Stores the data in the Header datat from the PL_Calculate Page/Controller (VFP). Then it is is used to render the data in the PL_View page for Product Services</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ave_Hard_Rate_TotalSC__c</fullName>
        <label>Ave Hard Rate TotalSC</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Approved_Date__c</fullName>
        <label>Last Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L Approval</label>
        <referenceTo>L2I_P_L_Approval__c</referenceTo>
        <relationshipName>PLA_Page_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pl_Version__c</fullName>
        <label>Pl Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_PAT_Percent__c</fullName>
        <label>Program PAT Percent</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_PBT_Percent__c</fullName>
        <label>Program PBT Percent</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Status__c</fullName>
        <label>Revision Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Archived Header Data</label>
    <nameField>
        <label>PLA_Page_Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archived Header Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>